fixed spacing

--- a/themes/particle-zola/sass/_projects.scss
+++ b/themes/particle-zola/sass/_projects.scss
@@ -39,10 +39,13 @@
   }
 }
 
-.row {
-  height: 375px;
-  margin-top: 0;
-}
+// .row {
+//   @media only screen and (min-width: $cut) {
+//
+//   }
+//   height: 375px;
+//   margin-top: 0;
+// }
 
 .contents {
   @media only screen and (min-width: $cut) {
